border btn and try to fix ul drag not visible in ios

--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -93,6 +93,9 @@
         img {
           width: 100%;
         }
+        svg {
+          width: 35px;
+        }
       }
       button {
         margin-top: 15px;
@@ -117,6 +120,7 @@
         padding: 16px 60px;
         outline: none;
         transition: all 0.8s cubic-bezier(0.2, 0.8, 0.2, 1.2) 0s;
+        border: none;
         &:hover {
           box-shadow: rgba(101, 41, 255, 0.25) 0px 20px 40px;
           transform: translateY(-3px);
