--- a/src/styles/StartCourse.scss
+++ b/src/styles/StartCourse.scss
@@ -70,6 +70,7 @@
         border-style: none;
         border-color: initial;
         border-image: initial;
+        border: none;
         padding: 16px 40px;
         outline: none;
         transition: all 0.8s cubic-bezier(0.2, 0.8, 0.2, 1.2) 0s;
