--- a/src/styles/page-contact/contact.scss
+++ b/src/styles/page-contact/contact.scss
@@ -64,6 +64,7 @@
         border-style: none;
         border-color: initial;
         border-image: initial;
+        border: none;
         padding: 16px 60px;
         outline: none;
         transition: all 0.8s cubic-bezier(0.2, 0.8, 0.2, 1.2) 0s;
